--- a/Template/home.html
+++ b/Template/home.html
@@ -263,7 +263,7 @@
                                 </div>
                             </div>
                              <div>
-                                <div class="flex justify-between text-sm mb-1 text-gray-300"><span>AWS/Cloud</span><span>75%</span></div>
+                                <div class="flex justify-between text-sm mb-1 text-gray-300"><span>Python Railway Web Hosting</span><span>75%</span></div>
                                 <div class="w-full bg-gray-700 rounded-full h-2">
                                     <div class="bg-indigo-500 h-2 rounded-full skill-bar-fill" style="width: 75%;"></div>
                                 </div>
@@ -412,7 +412,7 @@
         </section>
 
         <footer class="py-6 px-4 bg-[#121212] border-t border-gray-800 text-center">
-            <p class="text-sm text-gray-400">© 2024 Dnyaneshwar Zirpe. All rights reserved.</p>
+            <p class="text-sm text-gray-400">© 2025 Dnyaneshwar Zirpe. All rights reserved.</p>
         </footer>
 
     </div>
